Pull ontology from external service and select traits from ontology

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,4 +367,5 @@
     <string name="brapi_study_num_plots"> Plots</string>
     <string name="brapi_study_num_traits"> Traits</string>
     <string name="import_source_brapi">Remote (BrAPI)</string>
+    <string name="brapi_save_trait">Save Traits</string>
 </resources>
