--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -348,6 +348,14 @@
     <string name="preferences_brapi">BrAPI</string>
     <string name="brapi_base_url">BrAPI Base URL</string>
     <string name="brapi_base_url_desc">The base URL for the connected BrAPI server</string>
+    <string name="brapi_title">BrAPI Configuration</string>
+    <string name="brapi_save_authorize">Save and Authenticate</string>
+    <string name="brapi_authorize">Authorize BrAPI</string>
+    <string name="brapi_reauthorize">Reauthorize BrAPI</string>
+    <string name="brapi_revoke_auth">Log Out</string>
+    <string name="brapi_auth_success">BrAPI Authorization Successful</string>
+    <string name="brapi_auth_deny">BrAPI Authorization Denied</string>
+    <string name="brapi_btn_auth_summary">Brapi is currently authorized with %1$s</string>
     <string name="brapi_base_url_default">https://example.org</string>
     <string name="brapi_load_data_button">Load Fields</string>
     <string name="brapi_save_data_button">Save Field</string>
