--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -349,7 +349,7 @@
     <string name="brapi_base_url">BrAPI Base URL</string>
     <string name="brapi_base_url_desc">The base URL for the connected BrAPI server</string>
     <string name="brapi_title">BrAPI Configuration</string>
-    <string name="brapi_save_authorize">Save and Authenticate</string>
+    <string name="brapi_save_authorize">Save and Authorize</string>
     <string name="brapi_authorize">Authorize BrAPI</string>
     <string name="brapi_reauthorize">Reauthorize BrAPI</string>
     <string name="brapi_revoke_auth">Log Out</string>
