--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -336,6 +336,7 @@
     <string name="brapi_export_button">Export</string>
     <string name="brapi_export_title">BrAPI Export Statistics</string>
     <string name="brapi_export_num_new_obs"> New Observations</string>
+    <string name="brapi_export_num_synced_obs"> Synced Observations</string>
     <string name="brapi_export_num_ed_obs"> Edited Observations</string>
 
     <!-- Warnings/Catches -->
