--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -342,6 +342,8 @@
     <string name="brapi_export_skipped_user_created"> User Created Trait Observations</string>
     <string name="brapi_export_skipped_empty"> Empty Value Observations</string>
     <string name="brapi_export_skipped_wrong_source"> Different Data Source</string>
+    <string name="brapi_na">NA</string>
+    <string name="brapi_delete_message">Cannot delete synced BrAPI observation, using NA instead</string>
 
 
     <!-- Warnings/Catches -->
