--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,17 +213,17 @@
 
     <!-- Trait text and errors -->
     <string name="trait_layout_data_stored">Saved</string>
-    <string name="printlabeltitle">Print Label</string>
-    <string name="printstatustitle">Printer status</string>
-    <string name="printstatus">Retrieving connection status...</string>
-    <string name="labelsizetitle">Size:</string>
-    <string name="textfieldtitle">Text:</string>
-    <string name="textfieldtitle2">Text2:</string>
-    <string name="textfieldtitle3">Text3:</string>
-    <string name="textfieldtitle4">Text4:</string>
-    <string name="barcodefieldtitle">Barcode:</string>
-    <string name="labelcopiestitle">Copies:</string>
-    <string name="clearsettings">Clear settings</string>
+    <string name="trait_layout_print_title">Print Label</string>
+    <string name="trait_layout_print_status_title">Printer status</string>
+    <string name="trait_layout_print_status">Retrieving connection status...</string>
+    <string name="trait_layout_print_label_size_title">Size:</string>
+    <string name="trait_layout_print_text_field_title">Text:</string>
+    <string name="trait_layout_print_text_field_title_2">Text2:</string>
+    <string name="trait_layout_print_text_field_title_3">Text3:</string>
+    <string name="trait_layout_print_text_field_title_4">Text4:</string>
+    <string name="trait_layout_print_barcode_field_title">Barcode:</string>
+    <string name="trait_layout_print_label_copies_title">Copies:</string>
+    <string name="trait_layout_print_clear_settings">Clear settings</string>
 
     <string name="trait_error_hardware_missing">Your device does not contain the necessary hardware for this feature</string>
     <string name="trait_error_photo_missing">Photo does not exist</string>
