--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,34 +237,61 @@
     <string name="tutorial_dialog_title">Tutorial</string>
     <string name="tutorial_dialog_description">Would you like to enable the tutorial? This setting can be changed in the Settings.</string>
 
-    <string name="tutorial_title">Tutorial</string>
-    <string name="tutorial_previous">Previous</string>
-    <string name="tutorial_next">Next</string>
+    <string name="tutorial_main_infobars_title">InfoBars</string>
+    <string name="tutorial_main_infobars_description">InfoBars show extra data for each entry and can be changed using the dropdown menus.</string>
+    <string name="tutorial_main_traits_title">Traits</string>
+    <string name="tutorial_main_traits_description">The small, green arrows move between traits.</string>
+    <string name="tutorial_main_traitlist_title">Traits</string>
+    <string name="tutorial_main_traitlist_description">The current trait being collected. A list of active traits is displayed when the current trait is pressed.</string>
+    <string name="tutorial_main_entries_title">Entries</string>
+    <string name="tutorial_main_entries_description">The large, black arrows move between entries.</string>
+    <string name="tutorial_main_navinfo_title">Order columns</string>
+    <string name="tutorial_main_navinfo_description">This is where the primary and secondary order are displayed.</string>
+    <string name="tutorial_main_datacollect_title">Data input</string>
+    <string name="tutorial_main_datacollect_description">Data is entered in the bottom area of the screen. Different trait types have different layouts.</string>
+    <string name="tutorial_main_na_title">Missing data</string>
+    <string name="tutorial_main_na_description">The NA button is used to mark values as missing.</string>
+    <string name="tutorial_main_delete_title">Delete data</string>
+    <string name="tutorial_main_delete_description">Data is deleted using this button.</string>
+    <string name="tutorial_main_search_title">Search</string>
+    <string name="tutorial_main_search_description">The search icon allows database queries.</string>
+    <string name="tutorial_main_resources_title">Resources</string>
+    <string name="tutorial_main_resources_description">This displays a list of files in the Resources folder.</string>
+    <string name="tutorial_main_summary_title">Summary</string>
+    <string name="tutorial_main_summary_description">This displays a summary of all data for the current entry.</string>
+    <string name="tutorial_main_lockdata_title">Lock data</string>
+    <string name="tutorial_main_lockdata_description">This locks current data input</string>
 
-    <string name="tutorial_main_1">The InfoBars at the top of the screen show extra data for each entry. These can be changed using the dropdown menus.</string>
-    <string name="tutorial_main_2">The large, black arrows move between entries. The small, green arrows move between traits.</string>
-    <string name="tutorial_main_3">A list of active traits is displayed when the current trait is pressed.</string>
-    <string name="tutorial_main_4">The folder icon displays a list of files in the Resources folder.</string>
-    <string name="tutorial_main_5">The search icon allows database queries.</string>
-    <string name="tutorial_main_6">The summary icon displays a summary of all data for a given entry.</string>
+    <string name="tutorial_settings_fields_title">Fields</string>
+    <string name="tutorial_settings_fields_description">allows you to import and manage fields.</string>
+    <string name="tutorial_settings_fields_import">To start using Field Book, first import a field file.</string>
+    <string name="tutorial_settings_traits_title">Traits</string>
+    <string name="tutorial_settings_traits_description">allows you to add, import, and manage traits.</string>
+    <string name="tutorial_settings_collect_title">Collect Data</string>
+    <string name="tutorial_settings_collect_description">allows you to collect phenotypic data.</string>
+    <string name="tutorial_settings_profile_title">Profile</string>
+    <string name="tutorial_settings_profile_description">allows you to set the person and location.</string>
+    <string name="tutorial_settings_settings_title">Settings</string>
+    <string name="tutorial_settings_settings_description">allows additional configuration for data collection.</string>
+    <string name="tutorial_settings_export_title">Export</string>
+    <string name="tutorial_settings_export_description">Data can be exported in two formats: database or table.</string>
 
-    <string name="tutorial_settings_1">To import and manage fields, select Fields.</string>
-    <string name="tutorial_settings_2">To add, import, or manage traits, select Traits.</string>
-    <string name="tutorial_settings_3">To set the person and location, select Profile.</string>
-    <string name="tutorial_settings_4">To export data, select Export. Data can be exported in two formats: database or table. Columns from the original file can be included or excluded from the exported file.</string>
-    <string name="tutorial_settings_5">Settings allows additional configuration for data collection.</string>
-    <string name="tutorial_settings_6">After fields and traits have been created, select Collect Data to collect data.</string>
+    <string name="tutorial_fields_add_title">Add Field</string>
+    <string name="tutorial_fields_add_description">Import a field file.</string>
+    <string name="tutorial_fields_file_description">Files must contain three columns: a unique identifier, a primary order, and a secondary order. The primary/secondary order are used for navigation in the field.</string>
+    <string name="tutorial_fields_select_title">Active Field</string>
+    <string name="tutorial_fields_select_description">A field is selected for data collection after being imported.</string>
+    <string name="tutorial_fields_delete_title">Delete Field</string>
+    <string name="tutorial_fields_delete_description">To delete a field, open the menu on the left side of a field name and select Delete.</string>
 
-    <string name="tutorial_traits_1">Add Trait on the menu creates a new trait. It is not possible to use the keyboard and tutorial at the same time. Different trait formats have different layouts.</string>
-    <string name="tutorial_traits_2">To import trait files, choose Import on the toolbar.</string>
-    <string name="tutorial_traits_3">Each trait format utilizes a different layout for data collection.</string>
-    <string name="tutorial_traits_4">Use the checkbox on each trait to toggle its visibility on the main collection screen. Uncheck any traits you do not want to collect.</string>
-    <string name="tutorial_traits_5">Press the back button in the top left corner to return to the Settings screen.</string>
-
-    <string name="tutorial_fields_1">Add Field on the toolbar imports a field file.</string>
-    <string name="tutorial_fields_2">Files must contain three columns: a unique identifier, a primary order, and a secondary order. The primary/secondary order are used for navigation in the field.</string>
-    <string name="tutorial_fields_3">A field is selected for data collection after being imported.</string>
-    <string name="tutorial_fields_4">To delete a field, open the menu on the left side of a field name and select Delete.</string>
+    <string name="tutorial_traits_add_title">Add Trait</string>
+    <string name="tutorial_traits_add_description">Add Trait creates a new trait. Different trait formats have different collection layouts.</string>
+    <string name="tutorial_traits_import_title">Import Trait Lists</string>
+    <string name="tutorial_traits_import_description">To import a premade list of traits, choose Import on the toolbar.</string>
+    <string name="tutorial_traits_format_title">Trait Formats</string>
+    <string name="tutorial_traits_format_description">Different trait formats are indicated with different icons.</string>
+    <string name="tutorial_traits_visibility_title">Trait Visibility</string>
+    <string name="tutorial_traits_visibility_description">Traits can be disabled from collection by toggling the checkbox.</string>
 
     <!-- About dialog -->
     <string name="about_title">About</string>
