Updated about text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -304,15 +304,15 @@
     <string name="about_developer_trife_location" translatable="false">Kansas State University</string>
     <string name="about_developer_trife_email" translatable="false">trife@ksu.edu</string>
     <string name="about_developer_trife_website" translatable="false">https://github.com/PhenoApps/Field-Book</string>
-    <string name="about_developer_jpoland" translatable="false">Jesse Poland, Kansas State University</string>
-    <string name="about_developer_jpoland_email" translatable="false">jpoland@ksu.edu</string>
-    <string name="about_developer_jpoland_website" translatable="false">http://wheatgenetics.org</string>
     <string name="about_contributors_title">Contributors</string>
-    <string name="about_licenses_title">Licenses</string>
     <string name="about_contributors_developers_title">Developers</string>
     <string name="about_translators_title">Translators</string>
-    <string name="about_translators_list" translatable="false">Irazema Fuentes-Bueno,  Sandra Dunckel,  Shuangye Wu,  Narinder Singh,  Daljit Singh,  Erena Edae,  Tatiana Danilova,  Rodrigo Pedrozo,  Cristiano Lemes da Silva,  Sophie Bouchet,  Hiroyoshi Iwata,  Goro Ishikawa,  Khaled El-Shamaa, Mokhlesur Rahman, Alice Brunazzi</string>
+    <string name="about_translators_text" translatable="false">Irazema Fuentes-Bueno,  Sandra Dunckel,  Shuangye Wu,  Narinder Singh,  Daljit Singh,  Erena Edae,  Tatiana Danilova,  Rodrigo Pedrozo,  Cristiano Lemes da Silva,  Sophie Bouchet,  Hiroyoshi Iwata,  Goro Ishikawa,  Khaled El-Shamaa, Mokhlesur Rahman, Alice Brunazzi</string>
+    <string name="about_contributors_funding_title">Funding</string>
+    <string name="about_contributors_funding_text" translatable="false">Development of Field Book has been supported by the Collaborative Crop Research Program of The McKnight Foundation, the National Science Foundation (#1543958), and the National Institute of Food and Agriculture (#2019-67021-29931).</string>
     <string name="about_rate">Rate this app</string>
+    <string name="about_technical_title">Technical</string>
+    <string name="about_licenses_title">Licenses</string>
     <string name="changelog_title">Changelog</string>
     <string name="libraries_title">Libraries</string>
 
@@ -347,6 +347,7 @@
     <string name="import_source_box">Box</string>
     <string name="import_source_onedrive">OneDrive</string>
     <string name="import_source_brapi">BrAPI</string>
+    <string name="import_source_cloud">Cloud storage</string>
     <string name="import_source_ask">Always ask</string>
 
     <string name="import_dialog_title_fields">Import field</string>
